Signed-off-by: Ramy <Ramy@Ramy>

--- a/youbay-ejb/pom.xml
+++ b/youbay-ejb/pom.xml
@@ -41,9 +41,8 @@
 				<configuration>
 					<filename>${project.artifactId}.jar</filename>
 					<hostname>localhost</hostname>
-					<username>ouss</username>
-					<password>tigran1993
-					</password>
+					<username>admin</username>
+					<password>wildflyadmin</password>
 					<port>19990</port>
 				</configuration>
 				<executions>
